crates/llvmkit-ir/tests/compile_fail/unverified_module_no_deref_core.stderr
error[E0614]: type `Module<'_>` cannot be dereferenced
 --> tests/compile_fail/unverified_module_no_deref_core.rs:6:17
  |
6 |         let _ = (*module).i64_type();
  |                 ^^^^^^^^^ can't be dereferenced
